tests/lime/pass/bugs/args/slide_macro.wsa
slide 1
slide macro hello [slide 3] 2
hello
