tests/lime/fail/macros/macro_list_contains_open_bracket.wsa
push 1
macro hello [push 2 [ push 3]
hello
